<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_product_image"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:contentDescription="@string/product_image"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_title"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/lorem_ipsum"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_description"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/lorem_ipsum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_product_image"
        app:layout_constraintTop_toBottomOf="@id/tv_product_title" />

    <ImageView
        android:id="@+id/iv_price_icon"
        android:layout_width="28dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/price_icon"
        android:src="@drawable/baseline_attach_money_24"
        app:layout_constraintStart_toEndOf="@id/iv_product_image"
        app:layout_constraintTop_toBottomOf="@id/tv_product_description" />

    <TextView
        android:id="@+id/tv_price"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_price_icon"
        app:layout_constraintStart_toEndOf="@id/iv_price_icon"
        app:layout_constraintTop_toTopOf="@id/iv_price_icon"
        tools:text="4.99" />

    <ImageView
        android:id="@+id/iv_rating_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/rating"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintStart_toEndOf="@id/iv_product_image"
        app:layout_constraintTop_toBottomOf="@id/tv_price" />

    <TextView
        android:id="@+id/tv_rating"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_rating_icon"
        app:layout_constraintStart_toEndOf="@id/iv_rating_icon"
        app:layout_constraintTop_toTopOf="@id/iv_rating_icon"
        tools:text="4.1" />

    <TextView
        android:id="@+id/tv_rating_count"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_rating"
        app:layout_constraintStart_toEndOf="@id/tv_rating"
        app:layout_constraintTop_toTopOf="@id/tv_rating"
        tools:text="(137)" />

    <ImageView
        android:id="@+id/iv_add_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/add_icon"
        android:src="@drawable/baseline_add_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_cart_count"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/iv_add_icon"
        app:layout_constraintEnd_toStartOf="@id/iv_add_icon"
        app:layout_constraintTop_toTopOf="@id/iv_add_icon"
        tools:text="2" />

    <ImageView
        android:id="@+id/iv_minus_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/add_icon"
        android:src="@drawable/minus_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tv_cart_count"
        app:layout_constraintEnd_toStartOf="@id/tv_cart_count"
        app:layout_constraintTop_toTopOf="@id/tv_cart_count" />

</androidx.constraintlayout.widget.ConstraintLayout>