<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.ui.detail.ProductDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_image"
            android:src="@drawable/app_icon_cropped"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/lorem_ipsum_short"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_product_image" />

        <ImageView
            android:id="@+id/iv_price_icon"
            android:layout_width="28dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/price_icon"
            android:src="@drawable/baseline_attach_money_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_title" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_price_icon"
            app:layout_constraintStart_toEndOf="@id/iv_price_icon"
            app:layout_constraintTop_toTopOf="@id/iv_price_icon"
            tools:text="4.99" />

        <ImageView
            android:id="@+id/iv_rating_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/rating_icon"
            android:src="@drawable/baseline_star_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_price_icon" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_rating_icon"
            app:layout_constraintStart_toEndOf="@id/iv_rating_icon"
            app:layout_constraintTop_toTopOf="@id/iv_rating_icon"
            tools:text="4.1" />

        <TextView
            android:id="@+id/tv_rating_count"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating"
            app:layout_constraintStart_toEndOf="@id/tv_rating"
            app:layout_constraintTop_toTopOf="@id/tv_rating"
            tools:text="(137)" />

        <TextView
            android:id="@+id/tv_product_description"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_rating_icon"
            tools:text="@string/lorem_ipsum" />

        <ImageView
            android:id="@+id/iv_add_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/add_icon"
            android:src="@drawable/baseline_add_circle_outline_24"
            app:layout_constraintBottom_toTopOf="@id/tv_product_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_title" />

        <TextView
            android:id="@+id/tv_cart_count"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/iv_add_icon"
            app:layout_constraintEnd_toStartOf="@id/iv_add_icon"
            app:layout_constraintTop_toTopOf="@id/iv_add_icon"
            tools:text="2"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_minus_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/add_icon"
            android:src="@drawable/minus_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tv_cart_count"
            app:layout_constraintEnd_toStartOf="@id/tv_cart_count"
            app:layout_constraintTop_toTopOf="@id/tv_cart_count"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>